# presentations

./: .gitmodules  CMakeLists.txt  CrazyEasyScriptingWithChaiScript.md  CurrentStateOfStaticAnalysis.md  HowAndWhyToAddScripting.md  PracticalPerformancePractices-CppCon2016.md  PracticalPerformancePractices.md  ThinkingPortable.md  WhyAndHowToAddScripting.md  build.sh  highlightjs-header.html  optimized_parse_node_graph.dot  parse_node_graph.dot  parse_node_graph_labeled.dot  revealjs-header.html
CrazyEasy/: CMakeLists.txt  sharing_functions.cpp  sharing_futures.cpp
CrazyEasyScriptingWithChaiScript/: CMakeLists.txt  basics.cpp  chaiscript_stdlib.cpp  config.chai  config_file.cpp  sharing_data.cpp  sharing_exceptions.cpp  sharing_futures.cpp
HowAndWhyToAddScripting/BoostPythonExample/: boost_python.cpp  build.txt
HowAndWhyToAddScripting/ChaiScriptExample/: ChaiScript.cpp  build.txt
HowAndWhyToAddScripting/SWIGRubyExample/: CMakeLists.txt  EmbeddedScripting.i  exposed_code.cpp  exposed_code.hpp  main.cpp
HowAndWhyToAddScripting/sol2Example/: build.txt  sol2.cpp
IntroToModernCpp/: DenverDevDay2016.pptx
RichCodeForTinyMachines/: Rich Code For Tiny Computers.pptx  RichCode-Sec1.cpp  RichCode-Sec2.cpp  RichCode-Sec4.cpp  RichCode-Sec5.cpp  RichCode-Sec6.cpp  RichCode-Sec7.cpp
RichCodeForTinyMachines/Images/: CPU Arch.emf  highcolor_smiley.wmf  joystick.emf  smiley.wmf
RichCodeForTinyMachines/Source/: Display.cpp  Final.cpp  Joystick.cpp  Memory_Mapped_1.cpp  Memory_Mapped_2.cpp  Monochrome_Sprites.cpp  Multicolor_Sprites.cpp  Palette.cpp  RAII-Sanity_Check.cpp  RAII.cpp  RichCode-Sec1.cpp  RichCode-Sec2.cpp  RichCode-Sec3.cpp  RichCode-Sec4.cpp  RichCode-Sec5.cpp  RichCode-Sec6.cpp  RichCode-Sec7.cpp  RichCode-Sec8.cpp
highlight.js/: highlight.pack.js
wip/: PracticalPerformanceConsiderations.md
